pliki w poprawnym miejscu

--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: python
     plan: free
     region: oregon
-    buildCommand: pip install -r requirements.txt && python elektronika/manage.py collectstatic --noinput
-    startCommand: gunicorn elektronika.elektronika.wsgi:application
+    buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput
+    startCommand: gunicorn elektronika.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: elektronika.settings
