Fix: Explicitly set RENDER environment variable and improve database startup diagnostics

--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,8 @@ services:
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: elektronika.settings
+      - key: RENDER
+        value: "true"
     autoDeploy: true
     disk:
       name: elektronika-data
