--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     region: oregon
     buildCommand: pip install -r requirements.txt
-    startCommand: bash start.sh
+    startCommand: python startup.py && gunicorn elektronika.wsgi:application --bind 0.0.0.0:${PORT:-8000} --workers 1 --timeout 60
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: elektronika.settings
