--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     region: oregon
     buildCommand: pip install -r requirements.txt
-    startCommand: python startup.py 2>&1 | tee /tmp/startup.log && gunicorn elektronika.wsgi:application --bind 0.0.0.0:${PORT:-8000} --workers 1 --timeout 60
+    startCommand: bash run.sh
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: elektronika.settings
