--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: python
     plan: free
     region: oregon
-    buildCommand: pip install -r requirements.txt
-    startCommand: bash run.sh
+    buildCommand: pip install -r requirements.txt && python startup.py
+    startCommand: gunicorn elektronika.wsgi:application --bind 0.0.0.0:${PORT:-8000} --workers 1 --timeout 60
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: elektronika.settings
