--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     region: oregon
-        buildCommand: "pip install -r requirements.txt; python manage.py migrate; python manage.py collectstatic --no-input"
+        buildCommand: "pip install -r requirements.txt; mkdir -p /data; chmod 777 /data; python manage.py migrate; python manage.py collectstatic --no-input"
         startCommand: gunicorn elektronika.wsgi
     envVars:
       - key: DJANGO_SETTINGS_MODULE
