pls db work clan

--- a/render.yaml
+++ b/render.yaml
@@ -11,4 +11,8 @@ services:
       - key: RENDER
         value: "true"
     autoDeploy: true
+    disk:
+      name: elektronika-data
+      mountPath: /data
+      sizeGB: 1
 
